--- a/AreumJeon/css/portfolio.css
+++ b/AreumJeon/css/portfolio.css
@@ -652,7 +652,10 @@ footer small{
     background: #efefed;
     display: block !important;
   }
-  header.fixed{height: 70px;background-color: rgb(255, 254, 254);
+  header.fixed{
+    height: 70px;
+    line-height: 1.5;
+    background-color: rgb(255, 254, 254);
     transition: background-color 1s ease;}
   header .logo{text-align: center;}
   header .logo a{font-size: 14px;color: gray;}
@@ -660,7 +663,7 @@ footer small{
 
    /* nivigation */
    header .nav{
-    right: -200px;
+    right: -202px;
     /* width: 60%; */
     margin-top: -10px;
     z-index: 10;
