--- a/AreumJeon/css/portfolio.css
+++ b/AreumJeon/css/portfolio.css
@@ -561,18 +561,19 @@ section .box:nth-child(6){background: #fff;height: 800px;}
 
 /* 위로가기 버튼 goTop */
 #goTop{
-  visibility: hidden;
-  opacity: 0;
   position:fixed;
   right: 20px;
   bottom: 80px;
-  font-size: 2.5em;
-  z-index: 100;
-  transition: all 0.5;/*서서히 나타나는 효과*/
-  background-color: rgba(#000000, 0.3);
-  width: 50px;
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
   border:0;
   border-radius: 50px;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 100;
+  transition: opacity 0.5;/*서서히 나타나는 효과*/
+  background-color: rgba(#000000, 0.3);
 
 }
 #goTop.on{
@@ -734,6 +735,10 @@ footer small{
 
 /* workprocess */
    section .box:nth-child(4){height: auto;padding-bottom: 100px;}
+
+/* goTop, goDown */
+#goTop i{color: #000;}
+
 
 
 
