--- a/AreumJeon/css/portfolio.css
+++ b/AreumJeon/css/portfolio.css
@@ -54,11 +54,14 @@ header.fixed{
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
+  /* right: 0; */
+  width: 1349px;
+  height: 85px;
+  /* max-width: 1349px; */
+  margin: 0 auto;
+  text-align: center;
   background-color: rgba(0, 0, 0, 0.13);
   z-index: 999999;
-  width: 100%;
-  height: 85px;
   line-height: 62px;
   display: block !important;
 }
@@ -99,7 +102,8 @@ header .logo{margin-top: -7px;}
 
 /* 네비게이션 ================================================================*/
 header .nav{
-  right: 0;
+  /* right: 0; */
+  padding-left: 752px;
   top: 7px;
   overflow: hidden;
   position: absolute;
@@ -374,11 +378,15 @@ section .box:nth-child(6){background: #fff;height: 800px;}
 /* 첫번째 슬라이드 */
 .swiper-slide{color: #000 !important;}
 .slide_text{
-  position: absolute;
+  position: relative;
+  width: 1100px;
   font-size: 36px;
   color: #fff;
   letter-spacing: 10px;
-  opacity: 0;transform: translate3d(-20%,0,0);
+  margin: 0 auto;
+  opacity: 0;
+  transform: translate3d(-20%,0,0);
+  /* -mz-transform-origin-x: -20%; */
   transition: all .6s cubic-bezier(0.215, 0.61, 0.355, 1) 1.4s;
   }
 .swiper-slide.swiper-slide-active .slide_text{opacity: 1;transform: translate3d(0,0,0);}
@@ -525,7 +533,7 @@ footer{
   font-size: 13px;
   text-align: center;
 }
-footer .container{height: 100%;padding: 40px;}
+footer .container{height: 100%;padding: 40px;margin-bottom: 0;}
 footer .sns{
   position: absolute;
   top: 20px;
