--- a/AreumJeon/css/main.css
+++ b/AreumJeon/css/main.css
@@ -145,12 +145,15 @@ html,body{
   left: 50%;
   /* top: 50%; */
   text-align: center;
-  font-size: 8px;
+  font-size: 12px;
   color: #fff;
   /* margin-top: -100px; */
   padding-bottom: 10px;
   /* animation-duration: 2s; */
   animation-delay: 1s;
+  letter-spacing: 2px;
+  /* font-family: 'Nanum Myeongjo', serif; */
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
 
